Card section part 01

--- a/index.html
+++ b/index.html
@@ -57,6 +57,64 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="main-container">
+        <section class>
+          <figure>
+            <a class="product-img" href="">
+              <img src="images/image-product-1.jpg" alt="" />
+            </a>
+          </figure>
+          <div class="thumbnails">
+            <a class="border-primary-clr" href=""
+              ><img
+                class="active-thumbnail"
+                src="images/image-product-1-thumbnail.jpg"
+                alt="" /></a
+            ><a href=""
+              ><img src="images/image-product-2-thumbnail.jpg" alt="" /></a
+            ><a href=""
+              ><img src="images/image-product-3-thumbnail.jpg" alt="" /></a
+            ><a href=""
+              ><img src="images/image-product-4-thumbnail.jpg" alt=""
+            /></a>
+          </div>
+        </section>
+        <section class="product-card">
+          <div>
+            <h2 class="company-name">Sneaker Company</h2>
+            <h1 class="title">Fall Limited Edition Sneakers</h1>
+          </div>
+          <p>
+            These low-profile sneakers are your perfect casual wear companion.
+            Featuring a durable rubber outer sole, they’ll withstand everything
+            the weather can offer.
+          </p>
+          <div class="price">
+            <div class="price-before">
+              <h1>$125.00</h1>
+              <span class="sale"><h2>50%</h2></span>
+            </div>
+            <p class="price-after">$250.00</p>
+          </div>
+          <div class="buttons">
+            <div class="count-btn | flex">
+              <button class="flex">
+                <img src="images/icon-minus.svg" alt="" />
+              </button>
+              <p style="text-align: center">0</p>
+              <button class="flex">
+                <img src="images/icon-plus.svg" alt="" />
+              </button>
+            </div>
+            <button class="add-to-cart | flex">
+              <img src="images/icon-cart.svg" alt="" />
+              <p>Add to cart</p>
+            </button>
+          </div>
+        </section>
+      </div>
+    </main>
     <!-- Sneaker Company
 
   Fall Limited Edition Sneakers
