--- a/index.html
+++ b/index.html
@@ -59,18 +59,42 @@
     </header>
     <main>
       <div class="main-container">
-        <section class>
+        <section class="image-slider display-none">
+          <div class="close-btn">
+            <img src="images/icon-close.svg" alt="" />
+          </div>
+          <figure>
+            <div class="next-btn | slider-btn flex">
+              <img src="images/icon-next.svg" alt="" />
+            </div>
+            <div class="prev-btn | slider-btn flex">
+              <img src="images/icon-previous.svg" alt="" />
+            </div>
+            <a class="product-img" href="">
+              <img src="images/image-product-1.jpg" alt="" />
+            </a>
+          </figure>
+          <div class="thumbnails">
+            <a class="border-primary-clr active-thumbnail" href=""
+              ><img src="images/image-product-1-thumbnail.jpg" alt="" /></a
+            ><a href=""
+              ><img src="images/image-product-2-thumbnail.jpg" alt="" /></a
+            ><a href=""
+              ><img src="images/image-product-3-thumbnail.jpg" alt="" /></a
+            ><a href=""
+              ><img src="images/image-product-4-thumbnail.jpg" alt=""
+            /></a>
+          </div>
+        </section>
+        <section>
           <figure>
             <a class="product-img" href="">
               <img src="images/image-product-1.jpg" alt="" />
             </a>
           </figure>
           <div class="thumbnails">
-            <a class="border-primary-clr" href=""
-              ><img
-                class="active-thumbnail"
-                src="images/image-product-1-thumbnail.jpg"
-                alt="" /></a
+            <a class="border-primary-clr active-thumbnail" href=""
+              ><img src="images/image-product-1-thumbnail.jpg" alt="" /></a
             ><a href=""
               ><img src="images/image-product-2-thumbnail.jpg" alt="" /></a
             ><a href=""
