--- a/index.html
+++ b/index.html
@@ -86,20 +86,23 @@
             /></a>
           </div>
         </section>
-        <section>
+        <section class="product-img-thumbnails">
           <figure>
-            <a class="product-img" href="">
+            <a class="product-img">
               <img src="images/image-product-1.jpg" alt="" />
             </a>
           </figure>
           <div class="thumbnails">
-            <a class="border-primary-clr active-thumbnail" href=""
+            <a
+              class="border-primary-clr active-thumbnail"
+              href=""
+              original-img="images/image-product-1.jpg"
               ><img src="images/image-product-1-thumbnail.jpg" alt="" /></a
-            ><a href=""
+            ><a href="" original-img="images/image-product-2.jpg"
               ><img src="images/image-product-2-thumbnail.jpg" alt="" /></a
-            ><a href=""
+            ><a href="" original-img="images/image-product-3.jpg"
               ><img src="images/image-product-3-thumbnail.jpg" alt="" /></a
-            ><a href=""
+            ><a href="" original-img="images/image-product-4.jpg"
               ><img src="images/image-product-4-thumbnail.jpg" alt=""
             /></a>
           </div>
