--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
           </a>
           <nav class="primary-navigation">
             <ul class="nav-list">
-              <a href="">
-                <li>Collections</li>
-              </a>
-              <a href="">
-                <li>Men</li>
-              </a>
-              <a href="">
-                <li>Women</li>
-              </a>
-              <a href="">
-                <li>About</li>
-              </a>
-              <a href="">
-                <li>Contact</li>
-              </a>
+              <li>
+                <a href=""> Collections </a>
+              </li>
+              <li>
+                <a href=""> Men </a>
+              </li>
+              <li>
+                <a href=""> Women </a>
+              </li>
+              <li>
+                <a href=""> About </a>
+              </li>
+              <li>
+                <a href=""> Contact </a>
+              </li>
             </ul>
           </nav>
           <img class="cart-icon" src="images/icon-cart.svg" alt="" />
